nvlle plaquette + pdf

--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* .container { */
+/*     background: url("../img/Framebox.jpeg") no-repeat; */
+/*     background-position: center top; */
 
+/*     width: 1587px; */
+/*     height: 3369px; */
+/* } */
 
 
 
